src/test/deca/extension/codegen/invalid/result/test_acces_negatif_output.res
Error: int_selection_table_must_be_positive
